<resources>
    <string name="app_name">Test1</string>
    <string name="pageTitle">Vaccinations</string>
    <string name="subTitle">Item Name, Description, Edit</string>
    <string name="vacCalendarBtn">vacCalendarBtnImage</string>
    <string name="checkBtn">uncheckedBtn</string>
    <string name="checkBtn2">checkedBtn</string>
    <string name="pageTitleActivity2">Add Vaccine Details</string>
    <string name="vacDeleteBtn">Delete Vaccine</string>
    <string name="vacName">Vaccine Name :</string>
    <string name="vacNameInput">Enter vaccine name..</string>
    <string name="vacDosage">Dosage :</string>
    <string-array name="DosageList">
        <item>1/2 ml</item>
        <item>1 ml</item>
        <item>2 ml</item>
        <item>3 ml</item>
        <item>4 ml</item>
        <item>5 ml</item>
    </string-array>
    <string name="vacReminder">Add Reminder :</string>
    <string name="vacNotes">Notes :</string>
    <string name="vacNotesInput">Write something here..</string>
    <string name="vacSaveBtn">Save</string>
    <string name="vacCancelBtn">Cancel</string>
    <string name="vacNavigatorBtn">Vaccinations</string>
    <string name="vacReminderTitle">Add Reminder</string>
    <string name="vacReminderDate">Date :</string>
    <string name="vacReminderTime">Time :</string>
    <string name="vacDateInput">MM/DD/YY</string>
    <string name="vacTimeInput">Enter time...</string>

</resources>